--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,32 +4,34 @@ import ProjectSwiperVue from "@components/ProjectSwiper.vue";
 ---
 
 <Layout
-	title="Mein persönliches Portfolio - Frank"
-	description="Beispielbeschreibung"
+        title="Mein persönliches Portfolio - Frank"
+        description="Beispielbeschreibung"
 >
-	<section>
-		<h1>Herzlich willkommen auf meinem Portfolio</h1>
-		<ProjectSwiperVue client:load />
-		<p>
-Ich bin ein Web-Entwickler, der sich auf die Entwicklung von <b>suchmaschinenoptimierten Websites, Web-Applikationen und Progressiven Web Apps</b> spezialisiert hat. Meine Arbeit basiert auf Nuxt JS und Vue JS, um digitale Lösungen zu schaffen, die nicht nur <b>funktional</b>, sondern auch <b>benutzerfreundlich</b> sind. Derzeit tauche ich in die Welt des aufregenden Astro Build Frameworks ein.
-		</p>
-		<p>
-Das Astro Framework ist eine aufstrebende Plattform für die Webentwicklung. Es zeichnet sich durch seine Geschwindigkeit und Effizienz aus. Mit Astro können Websites erstellt werden, die nicht nur <b>extrem schnell geladen werden, sondern auch sicher und suchmaschinenfreundlich</b> sind. Es ist die perfekte Wahl für Entwickler, die <b>Performance und SEO</b> im Blick behalten möchten.
-</p>
-<p>
-Neben meiner Arbeit an Websites entwickle ich auch <b>HTML-Games</b>. Dabei verlasse ich mich auf das Phaser-Framework, um unterhaltsame und interaktive Spiele zu gestalten.
-</p>
-<p>
-Möchtest du mehr über mich erfahren? Besuche die "Über mich"-Seite, auf der du mich näher kennenlernen kannst. Auf der "Projekte"-Seite stelle ich dir ausserdem verschiedene meiner Arbeiten vor. Hier erhaltest du Einblicke in meine bisherigen Projekte und du kannst dich von meiner Arbeit inspirieren lassen.
-</p>
-<p>
-Ich freue mich darauf, die digitale Welt mit dir zu erkunden und stehe für Fragen jeglicher Art gerne zur Verfügung. Kontaktiere mich hierfür über das Kontaktformular oder schreibe mir einfach eine Mail.
-		</p>
-	</section>
+    <section>
+        <h1>Herzlich willkommen auf meinem Portfolio</h1>
+        <ProjectSwiperVue client:load />
+        <p>
+            Ich bin ein Web-Entwickler, der sich auf die Entwicklung von
+            <b>suchmaschinenoptimierten Websites, Web-Applikationen und Progressiven Web Apps</b> spezialisiert hat. Meine Arbeit basiert auf Nuxt JS und Vue JS, um digitale Lösungen zu schaffen, die nicht nur
+            <b>funktional</b>, sondern auch
+            <b>benutzerfreundlich</b> sind. Derzeit tauche ich in die Welt des aufregenden Astro Build Frameworks ein.
+        </p>
+        <p>
+            Das Astro Framework ist eine aufstrebende Plattform für die Webentwicklung. Es zeichnet sich durch seine Geschwindigkeit und Effizienz aus. Mit Astro können Websites erstellt werden, die nicht nur
+            <b>extrem schnell geladen werden, sondern auch sicher und suchmaschinenfreundlich</b> sind. Es ist die perfekte Wahl für Entwickler, die
+            <b>Performance und SEO</b> im Blick behalten möchten.
+        </p>
+        <p>
+            Möchtest du mehr über mich erfahren? Besuche die "Über mich"-Seite, auf der du mich näher kennenlernen kannst. Auf der "Projekte"-Seite stelle ich dir ausserdem verschiedene meiner Arbeiten vor. Hier erhaltest du Einblicke in meine bisherigen Projekte und du kannst dich von meiner Arbeit inspirieren lassen.
+        </p>
+        <p>
+            Ich freue mich darauf, die digitale Welt mit dir zu erkunden und stehe für Fragen jeglicher Art gerne zur Verfügung. Kontaktiere mich hierfür über das Kontaktformular oder schreibe mir einfach eine Mail.
+        </p>
+    </section>
 </Layout>
 
 <style>
-	h1 {
-		text-align: center;
-	}
+    h1 {
+        text-align: center;
+    }
 </style>
