--- a/src/components/ProjectOverview.astro
+++ b/src/components/ProjectOverview.astro
@@ -5,14 +5,14 @@ import {Image} from "astro:assets";
 ---
 <section>
     <article>
-        <a href="/projekte/1914-in-a-timeline-glamhack">
+        <a href="/projekte/1914-in-a-timeline-glamhack" rel="prefetch">
             <Image
                 src={headerImage}
                 alt="AltImage"
                 loading="eager"
             />
         </a>
-        <a href="/projekte/oekologisch">
+        <a href="/projekte/oekologisch" rel="prefetch">
             <Image
                src={oekologischImage}
                alt="AltImage"
@@ -21,3 +21,28 @@ import {Image} from "astro:assets";
         </a>
     </article>
 </section>
+
+<style lang="scss">
+    article {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 1rem;
+      @media (max-width: 1200px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      @media (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media (max-width: 460px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+      a {
+        display: inline-block;
+        width: 100%;
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
+</style>
