--- a/src/components/TheFooter.astro
+++ b/src/components/TheFooter.astro
@@ -1,3 +1,6 @@
+---
+import TopButton from "./TopButton.astro";
+---
 <footer>
     <div class="wrapper">
         <nav>
@@ -11,6 +14,7 @@
         </nav>
     </div>
 </footer>
+<TopButton />
 
 <style>
     footer {
