--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,11 @@
 ---
 import Layout from '@layouts/Layout.astro';
 import ProjectSwiperVue from "@components/ProjectSwiper.vue";
+import developerImage from "@assets/icons/developer.svg";
+import fastImage from "@assets/icons/fast.svg";
+import contactImage from "@assets/icons/contact.svg";
+import {Image} from "astro:assets";
 ---
-
 <Layout
         title="Mein persönliches Portfolio - Frank"
         description="Beispielbeschreibung"
@@ -10,28 +13,91 @@ import ProjectSwiperVue from "@components/ProjectSwiper.vue";
     <section>
         <h1>Herzlich willkommen auf meinem Portfolio</h1>
         <ProjectSwiperVue client:load />
-        <p>
-            Ich bin ein Web-Entwickler, der sich auf die Entwicklung von
-            <b>suchmaschinenoptimierten Websites, Web-Applikationen und Progressiven Web Apps</b> spezialisiert hat. Meine Arbeit basiert auf Nuxt JS und Vue JS, um digitale Lösungen zu schaffen, die nicht nur
-            <b>funktional</b>, sondern auch
-            <b>benutzerfreundlich</b> sind. Derzeit tauche ich in die Welt des aufregenden Astro Build Frameworks ein.
-        </p>
-        <p>
-            Das Astro Framework ist eine aufstrebende Plattform für die Webentwicklung. Es zeichnet sich durch seine Geschwindigkeit und Effizienz aus. Mit Astro können Websites erstellt werden, die nicht nur
-            <b>extrem schnell geladen werden, sondern auch sicher und suchmaschinenfreundlich</b> sind. Es ist die perfekte Wahl für Entwickler, die
-            <b>Performance und SEO</b> im Blick behalten möchten.
-        </p>
-        <p>
-            Möchtest du mehr über mich erfahren? Besuche die "Über mich"-Seite, auf der du mich näher kennenlernen kannst. Auf der "Projekte"-Seite stelle ich dir ausserdem verschiedene meiner Arbeiten vor. Hier erhaltest du Einblicke in meine bisherigen Projekte und du kannst dich von meiner Arbeit inspirieren lassen.
-        </p>
-        <p>
-            Ich freue mich darauf, die digitale Welt mit dir zu erkunden und stehe für Fragen jeglicher Art gerne zur Verfügung. Kontaktiere mich hierfür über das Kontaktformular oder schreibe mir einfach eine Mail.
-        </p>
+    </section>
+    <section>
+        <div class="content">
+            <div class="text">
+                <h2>Über mich</h2>
+                <p>
+                    Ich bin ein Web-Entwickler, der sich auf die Entwicklung von
+                    <b>suchmaschinenoptimierten Websites, Web-Applikationen und Progressiven Web Apps</b> spezialisiert hat. Meine Arbeit basiert auf <a href="https://nuxt.com/" target="_blank" rel="noreferrer nofollow noopener">Nuxt JS</a> und <a href="https://vuejs.org/" target="_blank" rel="noreferrer nofollow noopener">Vue JS</a>, um digitale Lösungen zu schaffen, die nicht nur
+                    <b>funktional</b>, sondern auch
+                    <b>benutzerfreundlich</b> sind. Derzeit tauche ich in die Welt des aufregenden <a href="https://astro.build/" target="_blank" rel="noreferrer nofollow noopener">Astro Build</a> Frameworks ein.
+                </p>
+            </div>
+            <Image
+                    src={developerImage}
+                    alt="AltImage"
+                    loading="eager"
+            />
+        </div>
+        <div class="content">
+            <div class="text">
+                <h2>Aktuelle Learnings</h2>
+                <p>
+                    Das <a href="https://astro.build/" target="_blank" rel="noreferrer nofollow noopener">Astro Build</a> Framework ist eine aufstrebende Plattform für die Webentwicklung. Es zeichnet sich durch seine Geschwindigkeit und Effizienz aus. Mit Astro können Websites erstellt werden, die nicht nur
+                    <b>extrem schnell geladen werden, sondern auch sicher und suchmaschinenfreundlich</b> sind.
+                </p>
+            </div>
+            <Image
+                    src={fastImage}
+                    alt="AltImage"
+                    loading="eager"
+            />
+        </div>
+        <div class="content">
+            <div class="text">
+                <h2>Kontakt</h2>
+                <p>
+                    Ich freue mich darauf, die digitale Welt mit dir zu erkunden und stehe für Fragen jeglicher Art gerne zur Verfügung. Kontaktiere mich hierfür über das <a class="internal" href="/kontakt" rel="prefetch">Kontaktformular</a> oder schreibe mir einfach eine <a class="mail" href="mailto:mail@frankzinsli.ch">Mail</a>.
+                </p>
+            </div>
+            <Image
+                    src={contactImage}
+                    alt="AltImage"
+                    loading="eager"
+            />
+        </div>
     </section>
 </Layout>
 
-<style>
+<style lang="scss">
     h1 {
         text-align: center;
+    }
+    section {
+        margin: 2.5rem 0 5rem;
+      &:nth-child(2) {
+         display: flex;
+         flex-flow: column nowrap;
+         gap: 5rem;
+      }
+      .content {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        gap: 2.5rem;
+        &:nth-child(even) {
+          flex-direction: row-reverse;
+        }
+        .text {
+          width: calc(66% - 2.5rem);
+        }
+        img {
+          width: 33%;
+          height: auto;
+        }
+        @media (max-width: 650px) {
+          flex-flow: column;
+          gap: .5rem;
+          &:nth-child(even) {
+            flex-direction: column;
+          }
+          .text, img {
+            width: 100%;
+          }
+        }
+      }
     }
 </style>
