--- a/src/components/TopButton.astro
+++ b/src/components/TopButton.astro
@@ -44,6 +44,9 @@
     &.show-button {
       transform: scale(1);
     }
+    @media (min-width: 768px) {
+      display: none;
+    }
   }
 
   #topButton:hover {
