--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import '@styles/normalize.css'
 import TheHeader from "@components/TheHeader.astro";
 import TheFooter from "@components/TheFooter.astro";
 import { ViewTransitions } from 'astro:transitions';
+import { fade } from 'astro:transitions';
 interface Props {
 	title: string;
 	description: string;
@@ -26,7 +27,7 @@ const { title, description } = Astro.props;
 	</head>
 	<body>
 		<TheHeader />
-		<main>
+		<main transition:animate={fade({ duration: '2s' })}>
 			<slot />
 		</main>
 		<TheFooter />
