--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -22,7 +22,7 @@ import Layout from '@layouts/Layout.astro';
 
         <p>
             <b>EU-Datenschutz-Grundverordnung (DSGVO) und Datenschutz in der Schweiz:</b><br>
-            Ich beachten die Datenschutzbestimmungen der DSGVO der EU und die Datenschutzgesetze der Schweiz. Weitere Informationen finden Sie in unserer Datenschutzerklärung.
+            Ich beachten die Datenschutzbestimmungen der DSGVO der EU und die Datenschutzgesetze der Schweiz. Weitere Informationen finden Sie in meiner <a href="/datenschutz" rel="prefetch">Datenschutzerklärung</a>.
         </p>
 
         <p>
