--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -31,7 +31,7 @@ import Layout from '@layouts/Layout.astro';
         </p>
 
         <p>
-            <b>Bildnachweise:</b><br>#
+            <b>Bildnachweise:</b><br>
             [Angabe der Urheberrechte für verwendete Bilder, falls erforderlich]
         </p>
 
