--- a/src/components/TheFooter.astro
+++ b/src/components/TheFooter.astro
@@ -3,22 +3,170 @@ import TopButton from "./TopButton.astro";
 ---
 <footer>
     <div class="wrapper">
+        <a class="footer-logo" href="/" aria-label="Link zur Startseite" rel="prefetch">
+            <svg
+                    width="756"
+                    height="320"
+                    viewBox="0 0 200 85"
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:svg="http://www.w3.org/2000/svg"
+            >
+                <style>
+                    .red, .grey, .white {
+                        fill-opacity: 1;
+                    }
+
+                    .red {
+                        fill: #d40000;
+                    }
+
+                    .grey {
+                        fill: #333333;
+                    }
+
+                    .white {
+                        fill: #f8f9fa;
+                    }
+                </style>
+
+                <g
+                        id="wrapper"
+                        transform="matrix(1,0,0,1,-5,-105.5)"
+                >
+                    <path
+                            class="red"
+                            transform="matrix(1.0194415,0,0,1,-4.3757088,2.9e-6)"
+                            d="m 55.725224,106 h 86.316426 v 85 H 55.725224 Z"
+                    />
+                    <g
+                            aria-label="FRANK"
+                            id="frank"
+                            transform="matrix(1.0194415,0,0,1,-4.3757088,2.9e-6)"
+                    >
+                        <path
+                                d="m 169.12983,169.29959 h 7.40324 v -20.44705 h 0.41129 l 18.03806,20.44705 h 10.3998 l -20.74084,-22.386 19.44821,-19.21318 h -9.98851 l -17.21548,17.62677 h -0.35253 v -17.62677 h -7.40324 z"
+                                class="white"
+                        />
+                        <path
+                                d="m 129.7634,169.29959 v -31.90445 h 0.11751 l 20.56457,31.90445 h 9.40094 v -41.59918 h -7.40324 v 30.90561 h -0.11751 l -20.15328,-30.90561 h -9.81223 v 41.59918 z"
+                                class="white"
+                        />
+                        <path
+                                class="grey"
+                                d="m 122.35997,127.70022 v 41.59952 h 7.40369 v -31.90451 h 0.1173 l 12.1605,18.86603 v -13.42657 l -9.86917,-15.13447 z"
+                        />
+                        <path
+                                d="m 83.581254,169.29959 3.760378,-9.51845 h 18.038058 l 3.87789,9.51845 h 8.46085 L 99.797883,127.70041 H 93.39349 l -18.096818,41.59918 z m 12.808787,-32.78579 6.404389,16.9217 H 89.868136 Z"
+                                class="grey"
+                        />
+                        <path
+                                d="m 50.325465,169.29959 v -17.62677 h 5.405543 l 9.635968,17.62677 h 8.930897 l -11.046109,-18.3906 c 5.87559,-0.82258 9.635968,-5.053 9.635968,-11.28113 0,-9.10716 -7.285732,-11.92745 -15.276535,-11.92745 H 42.922222 v 41.59918 z m 0,-35.25354 h 6.639417 c 3.87789,0 8.167071,0.76383 8.167071,5.52305 0,5.17052 -4.465449,5.75808 -8.695874,5.75808 h -6.110614 z"
+                                class="white"
+                        />
+                        <path
+                                class="grey"
+                                d="m 55.724764,127.70022 v 6.34534 h 1.239718 c 3.877886,0 8.16746,0.76397 8.16746,5.52318 0,5.17052 -4.46569,5.75779 -8.69611,5.75779 h -0.711068 v 6.34587 h 0.0062 l 9.635588,17.62683 H 74.29779 L 63.251436,150.90862 c 5.875584,-0.82258 9.636105,-5.05284 9.636105,-11.28097 0,-9.10715 -7.285792,-11.92743 -15.276587,-11.92743 z"
+                        />
+                        <path
+                                d="m 9.1963689,169.29959 h 7.4032431 v -17.27423 h 18.331842 v -6.69818 H 16.599612 v -10.92859 h 19.448204 v -6.69818 H 9.1963689 Z"
+                                class="white"
+                        />
+                    </g>
+                </g>
+            </svg>
+        </a>
         <nav>
-            <a href="/" rel="prefetch">Home</a>
-            <a href="/projekte" rel="prefetch">Projekte</a>
+            <strong>
+                Navigation
+            </strong>
+            <div class="links">
+                <div class="col">
+                    <a href="/" rel="prefetch">Home</a>
+                    <a href="/projekte" rel="prefetch">Projekte</a>
+                    <a href="/kontakt" rel="prefetch">Kontakt</a>
+                </div>
+                <div class="col">
+                    <a href="/datenschutz" rel="prefetch">Datenschutz</a>
+                    <a href="/impressum" rel="prefetch">Impressum</a>
+                </div>
+            </div>
         </nav>
-        <nav>
-            <a href="/kontakt" rel="prefetch">Kontakt</a>
-            <a href="/datenschutz" rel="prefetch">Datenschutz</a>
-            <a href="/impressum" rel="prefetch">Impressum</a>
-        </nav>
+    </div>
+    <div class="wrapper">
+        <small>&copy; {new Date().getFullYear()} Development by Frank Zinsli</small>
     </div>
 </footer>
 <TopButton />
 
-<style>
-    footer {
-        background-color: var(--color-dark);
-        color: var(--color-light);
+<style lang="scss">
+  footer {
+    background-color: var(--color-dark);
+    color: var(--color-light);
+
+    .wrapper:first-child {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: space-between;
+      align-items: center;
+      gap: 3rem;
+      padding: 5rem 0 4rem;
+      @media screen and (max-width: 600px) {
+        flex-flow: column nowrap;
+        nav {
+          width: 100%;
+          max-width: unset;
+          text-align: center;
+          display: flex;
+          flex-flow: column nowrap;
+          align-items: center;
+          .links {
+            text-align: left;
+          }
+        }
+      }
+      .footer-logo {
+        width: calc(50% - 1rem);
+        max-width: 400px;
+        min-width: 250px;
+      }
+      svg {
+        width: 100%;
+        height: auto;
+      }
     }
+    .wrapper:nth-child(2) {
+      text-align: center;
+      padding-bottom: 1rem;
+    }
+
+    nav {
+      max-width: calc(50% - 2rem);
+      strong {
+        font-size: 1.5rem;
+        padding-bottom: 1rem;
+        display: inline-block;
+      }
+      .links {
+        display: flex;
+        flex-flow: row nowrap;
+        gap: 2rem;
+      }
+      .col {
+        display: flex;
+        flex-flow: column nowrap;
+        gap: .5rem;
+      }
+      a {
+        color: var(--color-light);
+        text-decoration: underline;
+        text-decoration-color: transparent;
+        transition: all ease-in-out 300ms;
+
+        &:hover {
+          text-decoration-color: var(--color-accent);
+        }
+      }
+    }
+  }
 </style>
