--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,6 +56,10 @@ html, body {
     flex-flow: column nowrap;
     justify-content: space-between;
     scroll-behavior: smooth;
+    @supports (min-height: 100dvh) {
+        min-height: 100dvh;
+    }
+    min-height: 100vh;
 }
 body.fix-body {
     overflow: hidden;
@@ -76,7 +80,7 @@ main p a {
     text-decoration: underline;
     text-decoration-color: transparent;
     color: var(--color-dark);
-    background-image: url('../assets/icons/external-link.svg');
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23333' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cstyle%3E path:nth-child(4), path:nth-child(5) %7B stroke: %23333; %7D %3C/style%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 6h-6a2 2 0 0 0 -2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-6'/%3E%3Cpath d='M11 13l9 -9'/%3E%3Cpath d='M15 4h5v5'/%3E%3C/svg%3E%0A");
     background-size: 1rem;
     background-position: left center;
     background-repeat: no-repeat;
@@ -84,21 +88,20 @@ main p a {
     transition: all ease-in-out 300ms;
 }
 main p a.mail {
-    background-image: url('../assets/icons/mail.svg');
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23333' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cstyle%3E path:nth-child(5), path:nth-child(6) %7B stroke: %23333 %7D %3C/style%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 18h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5' /%3E%3Cpath d='M3 6l9 6l9 -6' /%3E%3Cpath d='M15 18h6' /%3E%3Cpath d='M18 15l3 3l-3 3' /%3E%3C/svg%3E%0A");
 }
 main p a.internal {
-    background-image: url('../assets/icons/internal-link.svg');
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23333' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cstyle%3E path:nth-child(3) %7B stroke: %23333 %7D %3C/style%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M9 15l6 -6' /%3E%3Cpath d='M11 6l.463 -.536a5 5 0 0 1 7.071 7.072l-.534 .464' /%3E%3Cpath d='M13 18l-.397 .534a5.068 5.068 0 0 1 -7.127 0a4.972 4.972 0 0 1 0 -7.071l.524 -.463' /%3E%3C/svg%3E%0A");
 }
 main p a:hover {
     text-decoration-color: var(--color-accent);
-    background-image: url('../assets/icons/external-link-hover.svg');
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23333' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cstyle%3E path:nth-child(4), path:nth-child(5) %7B stroke: %23d40000; %7D %3C/style%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 6h-6a2 2 0 0 0 -2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-6'/%3E%3Cpath d='M11 13l9 -9'/%3E%3Cpath d='M15 4h5v5'/%3E%3C/svg%3E%0A");
 }
 main p a.mail:hover {
-    text-decoration-color: var(--color-accent);
-    background-image: url('../assets/icons/mail-hover.svg');
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23333' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cstyle%3E path:nth-child(5), path:nth-child(6) %7B stroke: %23d40000 %7D %3C/style%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 18h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5' /%3E%3Cpath d='M3 6l9 6l9 -6' /%3E%3Cpath d='M15 18h6' /%3E%3Cpath d='M18 15l3 3l-3 3' /%3E%3C/svg%3E%0A");
 }
 main p a.internal:hover {
-    background-image: url('../assets/icons/internal-link-hover.svg');
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23333' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cstyle%3E path:nth-child(3) %7B stroke: %23d40000 %7D %3C/style%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M9 15l6 -6' /%3E%3Cpath d='M11 6l.463 -.536a5 5 0 0 1 7.071 7.072l-.534 .464' /%3E%3Cpath d='M13 18l-.397 .534a5.068 5.068 0 0 1 -7.127 0a4.972 4.972 0 0 1 0 -7.071l.524 -.463' /%3E%3C/svg%3E");
 }
 
 footer {
