--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -10,78 +10,80 @@ import Layout from '@layouts/Layout.astro';
     <section>
         <h1>Datenschutzerklärung</h1>
         <p>
-            Diese Datenschutzerklärung informiert Sie darüber, wie wir personenbezogene Daten auf unserer Website [Ihre Website-URL] (im Folgenden "Website") sammeln, verwenden und schützen.
+            Diese Datenschutzerklärung informiert Sie darüber, wie personenbezogene Daten auf der Website [frankzinsli.ch] gesammeln, verwendet und geschützt werden.
         </p>
 
-        <p>
-            <b>1. Verantwortliche Stelle</b>
-            <br>
-            Verantwortlich für die Datenverarbeitung auf dieser Website ist:
-            <br>
 
-            [Ihr Name oder Firmenname]
-            [Ihre Adresse]
-            [Ihre Stadt und Postleitzahl]
-            [E-Mail-Adresse]
+        <h2>1. Verantwortliche Stelle</h2>
+        <p>
+            Verantwortlich für die Datenverarbeitung auf dieser Website ist:<br />
+            Frank Zinsli - mail(at)frankzinsli.ch
         </p>
 
-        <p>
-            <b>2. Erhebung und Verarbeitung von Daten</b>
+
+        <h2>2. Erhebung und Verarbeitung von Daten</h2>
         <ul>
             <li>
-                Beim Besuch unserer Website werden bestimmte Daten automatisch erfasst, wie Ihre IP-Adresse, Browsertyp, Gerätetyp, Verweildauer auf der Website und besuchte Seiten. Diese Informationen dienen der Analyse und Verbesserung unserer Website und werden anonymisiert gespeichert.
+                Beim Besuch der Website werden bestimmte Daten automatisch erfasst, wie Ihre IP-Adresse, Browsertyp, Gerätetyp, Verweildauer auf der Website und besuchte Seiten. Diese Informationen dienen der Analyse und Verbesserung der Website und werden anonymisiert gespeichert.
             </li>
             <li>
-                Wenn Sie das Kontaktformular auf unserer Website nutzen, erfassen wir die von Ihnen bereitgestellten Daten, einschließlich Ihres Namens, Ihrer E-Mail-Adresse und Ihrer Nachricht. Diese Daten werden verwendet, um auf Ihre Anfrage zu antworten und zur Kommunikation mit Ihnen.
+                Wenn Sie das Kontaktformular auf der Website nutzen, werden die von Ihnen bereitgestellten Daten, einschließlich Ihres Namens, Ihrer E-Mail-Adresse und Ihrer Nachricht erfasst. Diese Daten werden verwendet, um auf Ihre Anfrage zu antworten und zur Kommunikation mit Ihnen.
             </li>
         </ul>
+
+
+        <h2>3. Matomo (Piwik) Analytics</h2>
+        <p>
+            Diese Website verwendet Matomo (ehemals Piwik), ein Open-Source-Analysetool. Matomo verwendet Cookies, um Informationen über die Nutzung der Website zu sammeln. Diese Daten helfen, die Website zu verbessern. Die IP-Adressen der Besucher werden anonymisiert, bevor sie gespeichert werden.
         </p>
 
-        <p>
-            <b>3. Matomo (Piwik) Analytics</b>
-            <br>
-            Diese Website verwendet Matomo (ehemals Piwik), ein Open-Source-Analysetool. Matomo verwendet Cookies, um Informationen über die Nutzung unserer Website zu sammeln. Diese Daten helfen uns, die Website zu verbessern und unser Angebot besser auf die Bedürfnisse unserer Besucher abzustimmen. Die IP-Adressen der Besucher werden anonymisiert, bevor sie gespeichert werden.
-        </p>
 
+        <h2>4. Cookies</h2>
         <p>
-            <b>4. Cookies</b>
-
             Wir verwenden keine zusätzlichen Cookies auf unserer Website.
         </p>
 
+        <h2>5. Weitergabe von Daten</h2>
         <p>
-            <b>5. Weitergabe von Daten</b>
-
-            Ihre personenbezogenen Daten werden nicht an Dritte weitergegeben, es sei denn, Sie haben ausdrücklich Ihr Einverständnis gegeben oder wir sind gesetzlich dazu verpflichtet.
+            Ihre personenbezogenen Daten werden nicht an Dritte weitergegeben.
         <p>
 
-        <p>
-            <b>6. Ihre Rechte</b>
 
-            Sie haben das Recht, Auskunft über die von uns gespeicherten Daten zu erhalten, sowie das Recht auf Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer Daten. Bitte kontaktieren Sie uns, um Ihre Rechte auszuüben.
+        <h2>6. Ihre Rechte</h2>
+        <p>
+            Sie haben das Recht, Auskunft über die von uns gespeicherten Daten zu erhalten, sowie das Recht auf Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer Daten.
         </p>
 
-        <p>
-            <b>7. Änderungen dieser Datenschutzerklärung</b>
 
-            Diese Datenschutzerklärung kann aktualisiert werden, um Änderungen in unseren Datenschutzpraktiken widerzuspiegeln. Wir empfehlen Ihnen, diese Seite regelmäßig zu überprüfen, um auf dem neuesten Stand zu bleiben.
+        <h2>7. Änderungen dieser Datenschutzerklärung</h2>
+        <p>
+            Diese Datenschutzerklärung kann aktualisiert werden, um Änderungen in den Datenschutzpraktiken widerzuspiegeln. Es ist empfehlenswert, diese Seite regelmäßig zu überprüfen, um auf dem neuesten Stand zu bleiben.
         </p>
 
-        <p>
-            <b>8. Kontakt</b>
 
-            Wenn Sie Fragen oder Anliegen bezüglich unserer Datenschutzerklärung haben, kontaktieren Sie uns bitte:
+        <h2>8. Kontakt</h2>
+        <p>
+            Bei Fragen oder anderen Anliegen, kontaktieren Sie mich bitte:
             <br>
-            [Ihr Name oder Firmenname]
-            [Ihre Adresse]
-            [E-Mail-Adresse]
+            Frank Zinsli
+            mail(at)frankzinsli.ch
         </p>
 
-        <p>
-            <b>Stand: [Aktualisiertes Datum]</b>
+        <p style="padding-top: 2rem">
+            <b>Stand: 26.10.2023</b>
         </p>
     </section>
 </Layout>
 
 <style>
+    h2 {
+        padding-top: 1.66rem;
+        padding-bottom: 0;
+        margin: 0;
+        font-size: 1.25rem;
+    }
+    p {
+        padding-top: .25rem;
+        margin: 0;
+    }
 </style>
