--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -8,42 +8,54 @@ import Layout from '@layouts/Layout.astro';
 >
     <section>
         <h1>Impressum</h1>
+
+        <h2>Verantwortlich für den Inhalt dieser Website:</h2>
         <p>
-            <b>Verantwortlich für den Inhalt dieser Website:</b><br>
             Frank Zinsli<br>
-            <a href="mailto:mail@frankzinsli.ch">mail@frankzinsli.ch</a>
+            mail(at)frankzinsli.ch
         </p>
 
+        <h2>Inhaltlich verantwortlich gemäß Art. 4 DSGVO:</h2>
         <p>
-            <b>Inhaltlich verantwortlich gemäß Art. 4 DSGVO:</b><br>
             Frank Zinsli<br>
-            <a href="mailto:mail@frankzinsli.ch">mail@frankzinsli.ch</a>
+            mail(at)frankzinsli.ch
         </p>
 
+        <h2>EU-Datenschutz-Grundverordnung (DSGVO) und Datenschutz in der Schweiz:</h2>
         <p>
-            <b>EU-Datenschutz-Grundverordnung (DSGVO) und Datenschutz in der Schweiz:</b><br>
-            Ich beachten die Datenschutzbestimmungen der DSGVO der EU und die Datenschutzgesetze der Schweiz. Weitere Informationen finden Sie in meiner <a href="/datenschutz" rel="prefetch">Datenschutzerklärung</a>.
+            Ich beachten die Datenschutzbestimmungen der DSGVO der EU und die Datenschutzgesetze der Schweiz. Weitere Informationen finden Sie in meiner
+            <a href="/datenschutz" rel="prefetch">Datenschutzerklärung</a>.
         </p>
 
+        <h2>Haftungshinweis:</h2>
         <p>
-            <b>Haftungshinweis:</b><br>
             Trotz sorgfältiger inhaltlicher Kontrolle übernehmen ich keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
         </p>
 
+        <h2>Bildnachweise:</h2>
         <p>
-            <b>Bildnachweise:</b><br>
             [Angabe der Urheberrechte für verwendete Bilder, falls erforderlich]
         </p>
 
+        <h2>Kontakt:</h2>
         <p>
-            <b>Kontakt:</b><br>
             <a href="/kontakt" rel="prefetch">Link zum Kontaktformular</a>
         </p>
         <p>
-            Stand: 01.01.2024
+            Stand: 26.10.2023
         </p>
     </section>
 </Layout>
 
 <style>
+    h2 {
+        padding-top: 1.66rem;
+        padding-bottom: 0;
+        margin: 0;
+        font-size: 1.25rem;
+    }
+    p {
+        padding-top: .25rem;
+        margin: 0;
+    }
 </style>
